@@ -516,9 +516,11 @@ sub find_unmatched_brace {
 # current symbol means in the context something remotely similar
 # to what PPI considers a PPI::Token::Symbol, but since we're doing
 # it the manual, stupid way, this may also work within quotelikes and regexes.
-sub _get_current_symbol {
-	my $editor = shift;
-	my $pos    = shift;
+sub get_current_symbol {
+	my $self = shift;
+	my $pos  = shift;
+
+	my $editor = $self->editor;
 	$pos = $editor->GetCurrentPos if not defined $pos;
 	my $line         = $editor->LineFromPosition($pos);
 	my $line_start   = $editor->PositionFromLine($line);
@@ -556,7 +558,7 @@ sub _get_current_symbol {
 		$token = $1;
 	}
 
-	# remove garbage first charactor from the token in case it's
+	# remove garbage first character from the token in case it's
 	# not a variable (Example: ->foo becomes >foo but should be foo)
 	$token =~ s/^[^\w\$\@\%\*\&:]//;
 
@@ -566,7 +568,7 @@ sub _get_current_symbol {
 sub find_variable_declaration {
 	my ($self) = @_;
 
-	my ( $location, $token ) = _get_current_symbol( $self->editor );
+	my ( $location, $token ) = $self->get_current_symbol;
 	unless ( defined $location ) {
 		Wx::MessageBox(
 			Wx::gettext("Current cursor does not seem to point at a variable"),
@@ -590,7 +592,7 @@ sub find_variable_declaration {
 sub find_method_declaration {
 	my ($self) = @_;
 
-	my ( $location, $token ) = _get_current_symbol( $self->editor );
+	my ( $location, $token ) = $self->get_current_symbol;
 	unless ( defined $location ) {
 		Wx::MessageBox(
 			Wx::gettext("Current cursor does not seem to point at a method"),
@@ -751,7 +753,7 @@ sub goto_sub {
 sub lexical_variable_replacement {
 	my ( $self, $replacement ) = @_;
 
-	my ( $location, $token ) = _get_current_symbol( $self->editor );
+	my ( $location, $token ) = $self->get_current_symbol;
 	if ( not defined $location ) {
 		Wx::MessageBox(
 			Wx::gettext("Current cursor does not seem to point at a variable"),
